src/parser.yacc.output
Terminals unused in grammar

    IMPORT
    IRUN
    ISTART
    IROOT
    ADDEQ
    SUBEQ
    POWEQ
    MULEQ
    DIVEQ
    MODEQ
    BANDEQ
    BOREQ
    BXOREQ
    ADDADD
    SUBSUB
    '!'


Grammar

    0 $accept: run $end

    1 run: block

    2 block: %empty
    3      | block statement ';'
    4      | block if_statement
    5      | block loop_statement
    6      | block function_statement

    7 type_statement: TYPE_NONE
    8               | TYPE_INT
    9               | TYPE_FLOAT
   10               | TYPE_STRING
   11               | TYPE_TRUTH
   12               | TYPE_LIST

   13 statement: expression
   14          | PRINT expression
   15          | EXIT expression
   16          | RETURNS expression

   17 TRUTH: FALSE
   18      | TRUE

   19 expression_list: expression ',' expression
   20                | expression_list ',' expression

   21 list_expression: '[' expression_list ']'
   22                | '[' expression ']'

   23 expression: %empty
   24           | INT
   25           | TRUTH
   26           | FLOAT
   27           | STRING
   28           | TYPE_NONE
   29           | VAR '=' expression
   30           | VAR
   31           | list_expression
   32           | TYPE expression
   33           | NOT expression
   34           | '(' expression ')'
   35           | expression '+' expression
   36           | expression '-' expression
   37           | expression '*' expression
   38           | expression '/' expression
   39           | expression '%' expression
   40           | expression POW expression
   41           | expression '&' expression
   42           | expression '|' expression
   43           | expression '^' expression
   44           | expression LEQ expression
   45           | expression LNEQ expression
   46           | expression LAND expression
   47           | expression LOR expression
   48           | expression '<' expression
   49           | expression '>' expression
   50           | expression LTEQ expression
   51           | expression GTEQ expression
   52           | function_expression
   53           | IF expression ':' expression ':' expression

   54 input_list: %empty
   55           | type_statement VAR
   56           | input_list ',' type_statement VAR

   57 function_statement: VAR type_statement '{' block '}'
   58                   | VAR type_statement ':' expression ';'
   59                   | VAR input_list ':' type_statement ':' expression ';'
   60                   | VAR input_list ':' type_statement '{' block '}'
   61                   | VAR input_list '{' block '}'

   62 function_expression: VAR '(' expression_list ')'
   63                    | VAR '(' expression ')'

   64 if_statement: IF expression '{' block '}'
   65             | IF expression ':' statement ';'
   66             | IF expression ':' statement ';' ELSE ':' statement ';'
   67             | IF expression '{' block '}' ELSE '{' block '}'
   68             | IF expression '{' block '}' ELSE ':' statement ';'
   69             | IF expression ':' statement ';' ELSE '{' block '}'

   70 loop_statement: WHILE expression '{' block '}'
   71               | FOR expression ':' expression ':' expression '{' block '}'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33)
    '%' (37) 39
    '&' (38) 41
    '(' (40) 34 62 63
    ')' (41) 34 62 63
    '*' (42) 37
    '+' (43) 35
    ',' (44) 19 20 56
    '-' (45) 36
    '/' (47) 38
    ':' (58) 53 58 59 60 65 66 68 69 71
    ';' (59) 3 58 59 65 66 68 69
    '<' (60) 48
    '=' (61) 29
    '>' (62) 49
    '[' (91) 21 22
    ']' (93) 21 22
    '^' (94) 43
    '{' (123) 57 60 61 64 67 68 69 70 71
    '|' (124) 42
    '}' (125) 57 60 61 64 67 68 69 70 71
    error (256)
    LAND (258) 46
    LOR (259) 47
    LEQ (260) 44
    LNEQ (261) 45
    LTEQ (262) 50
    GTEQ (263) 51
    POW (264) 40
    RETURNS (265) 16
    EXIT (266) 15
    PRINT (267) 14
    IF (268) 53 64 65 66 67 68 69
    ELSE (269) 66 67 68 69
    WHILE (270) 70
    FOR (271) 71
    TRUE (272) 18
    FALSE (273) 17
    IMPORT (274)
    IRUN (275)
    ISTART (276)
    IROOT (277)
    TYPE_INT (278) 8
    TYPE_FLOAT (279) 9
    TYPE_STRING (280) 10
    TYPE_NONE (281) 7 28
    TYPE_TRUTH (282) 11
    TYPE_LIST (283) 12
    TYPE (284) 32
    INT <int> (285) 24
    FLOAT <double> (286) 26
    STRING <std::string> (287) 27
    VAR <std::string> (288) 29 30 55 56 57 58 59 60 61 62 63
    ADDEQ (289)
    SUBEQ (290)
    POWEQ (291)
    MULEQ (292)
    DIVEQ (293)
    MODEQ (294)
    BANDEQ (295)
    BOREQ (296)
    BXOREQ (297)
    ADDADD (298)
    SUBSUB (299)
    NEG (300)
    NOT (301) 33
    NO_ELSE (302)


Nonterminals, with rules where they appear

    $accept (69)
        on left: 0
    run (70)
        on left: 1
        on right: 0
    block <RootNode*> (71)
        on left: 2 3 4 5 6
        on right: 1 3 4 5 6 57 60 61 64 67 68 69 70 71
    type_statement <Type> (72)
        on left: 7 8 9 10 11 12
        on right: 55 56 57 58 59 60
    statement <AstNode*> (73)
        on left: 13 14 15 16
        on right: 3 65 66 68 69
    TRUTH <bool> (74)
        on left: 17 18
        on right: 25
    expression_list <std::vector<AstNode*>> (75)
        on left: 19 20
        on right: 20 21 62
    list_expression <ListNode*> (76)
        on left: 21 22
        on right: 31
    expression <AstNode*> (77)
        on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53
        on right: 13 14 15 16 19 20 22 29 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 53 58 59 63 64 65 66 67 68 69 70 71
    input_list <std::list<std::tuple<std::string, Type>>> (78)
        on left: 54 55 56
        on right: 56 59 60 61
    function_statement <FunctionNode*> (79)
        on left: 57 58 59 60 61
        on right: 6
    function_expression <FunctionCallNode*> (80)
        on left: 62 63
        on right: 52
    if_statement <IfNode*> (81)
        on left: 64 65 66 67 68 69
        on right: 4
    loop_statement <AstNode*> (82)
        on left: 70 71
        on right: 5


State 0

    0 $accept: • run $end

    $default  reduce using rule 2 (block)

    run    go to state 1
    block  go to state 2


State 1

    0 $accept: run • $end

    $end  shift, and go to state 3


State 2

    1 run: block •
    3 block: block • statement ';'
    4      | block • if_statement
    5      | block • loop_statement
    6      | block • function_statement

    RETURNS    shift, and go to state 4
    EXIT       shift, and go to state 5
    PRINT      shift, and go to state 6
    IF         shift, and go to state 7
    WHILE      shift, and go to state 8
    FOR        shift, and go to state 9
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    TYPE_NONE  shift, and go to state 12
    TYPE       shift, and go to state 13
    INT        shift, and go to state 14
    FLOAT      shift, and go to state 15
    STRING     shift, and go to state 16
    VAR        shift, and go to state 17
    '('        shift, and go to state 18
    NOT        shift, and go to state 19
    '['        shift, and go to state 20

    $end      reduce using rule 1 (run)
    $default  reduce using rule 23 (expression)

    statement            go to state 21
    TRUTH                go to state 22
    list_expression      go to state 23
    expression           go to state 24
    function_statement   go to state 25
    function_expression  go to state 26
    if_statement         go to state 27
    loop_statement       go to state 28


State 3

    0 $accept: run $end •

    $default  accept


State 4

   16 statement: RETURNS • expression

    IF         shift, and go to state 29
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    TYPE_NONE  shift, and go to state 12
    TYPE       shift, and go to state 13
    INT        shift, and go to state 14
    FLOAT      shift, and go to state 15
    STRING     shift, and go to state 16
    VAR        shift, and go to state 30
    '('        shift, and go to state 18
    NOT        shift, and go to state 19
    '['        shift, and go to state 20

    $default  reduce using rule 23 (expression)

    TRUTH                go to state 22
    list_expression      go to state 23
    expression           go to state 31
    function_expression  go to state 26


State 5

   15 statement: EXIT • expression

    IF         shift, and go to state 29
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    TYPE_NONE  shift, and go to state 12
    TYPE       shift, and go to state 13
    INT        shift, and go to state 14
    FLOAT      shift, and go to state 15
    STRING     shift, and go to state 16
    VAR        shift, and go to state 30
    '('        shift, and go to state 18
    NOT        shift, and go to state 19
    '['        shift, and go to state 20

    $default  reduce using rule 23 (expression)

    TRUTH                go to state 22
    list_expression      go to state 23
    expression           go to state 32
    function_expression  go to state 26


State 6

   14 statement: PRINT • expression

    IF         shift, and go to state 29
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    TYPE_NONE  shift, and go to state 12
    TYPE       shift, and go to state 13
    INT        shift, and go to state 14
    FLOAT      shift, and go to state 15
    STRING     shift, and go to state 16
    VAR        shift, and go to state 30
    '('        shift, and go to state 18
    NOT        shift, and go to state 19
    '['        shift, and go to state 20

    $default  reduce using rule 23 (expression)

    TRUTH                go to state 22
    list_expression      go to state 23
    expression           go to state 33
    function_expression  go to state 26


State 7

   53 expression: IF • expression ':' expression ':' expression
   64 if_statement: IF • expression '{' block '}'
   65             | IF • expression ':' statement ';'
   66             | IF • expression ':' statement ';' ELSE ':' statement ';'
   67             | IF • expression '{' block '}' ELSE '{' block '}'
   68             | IF • expression '{' block '}' ELSE ':' statement ';'
   69             | IF • expression ':' statement ';' ELSE '{' block '}'

    IF         shift, and go to state 29
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    TYPE_NONE  shift, and go to state 12
    TYPE       shift, and go to state 13
    INT        shift, and go to state 14
    FLOAT      shift, and go to state 15
    STRING     shift, and go to state 16
    VAR        shift, and go to state 30
    '('        shift, and go to state 18
    NOT        shift, and go to state 19
    '['        shift, and go to state 20

    $default  reduce using rule 23 (expression)

    TRUTH                go to state 22
    list_expression      go to state 23
    expression           go to state 34
    function_expression  go to state 26


State 8

   70 loop_statement: WHILE • expression '{' block '}'

    IF         shift, and go to state 29
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    TYPE_NONE  shift, and go to state 12
    TYPE       shift, and go to state 13
    INT        shift, and go to state 14
    FLOAT      shift, and go to state 15
    STRING     shift, and go to state 16
    VAR        shift, and go to state 30
    '('        shift, and go to state 18
    NOT        shift, and go to state 19
    '['        shift, and go to state 20

    $default  reduce using rule 23 (expression)

    TRUTH                go to state 22
    list_expression      go to state 23
    expression           go to state 35
    function_expression  go to state 26


State 9

   71 loop_statement: FOR • expression ':' expression ':' expression '{' block '}'

    IF         shift, and go to state 29
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    TYPE_NONE  shift, and go to state 12
    TYPE       shift, and go to state 13
    INT        shift, and go to state 14
    FLOAT      shift, and go to state 15
    STRING     shift, and go to state 16
    VAR        shift, and go to state 30
    '('        shift, and go to state 18
    NOT        shift, and go to state 19
    '['        shift, and go to state 20

    $default  reduce using rule 23 (expression)

    TRUTH                go to state 22
    list_expression      go to state 23
    expression           go to state 36
    function_expression  go to state 26


State 10

   18 TRUTH: TRUE •

    $default  reduce using rule 18 (TRUTH)


State 11

   17 TRUTH: FALSE •

    $default  reduce using rule 17 (TRUTH)


State 12

   28 expression: TYPE_NONE •

    $default  reduce using rule 28 (expression)


State 13

   32 expression: TYPE • expression

    IF         shift, and go to state 29
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    TYPE_NONE  shift, and go to state 12
    TYPE       shift, and go to state 13
    INT        shift, and go to state 14
    FLOAT      shift, and go to state 15
    STRING     shift, and go to state 16
    VAR        shift, and go to state 30
    '('        shift, and go to state 18
    NOT        shift, and go to state 19
    '['        shift, and go to state 20

    $default  reduce using rule 23 (expression)

    TRUTH                go to state 22
    list_expression      go to state 23
    expression           go to state 37
    function_expression  go to state 26


State 14

   24 expression: INT •

    $default  reduce using rule 24 (expression)


State 15

   26 expression: FLOAT •

    $default  reduce using rule 26 (expression)


State 16

   27 expression: STRING •

    $default  reduce using rule 27 (expression)


State 17

   29 expression: VAR • '=' expression
   30           | VAR •
   57 function_statement: VAR • type_statement '{' block '}'
   58                   | VAR • type_statement ':' expression ';'
   59                   | VAR • input_list ':' type_statement ':' expression ';'
   60                   | VAR • input_list ':' type_statement '{' block '}'
   61                   | VAR • input_list '{' block '}'
   62 function_expression: VAR • '(' expression_list ')'
   63                    | VAR • '(' expression ')'

    TYPE_INT     shift, and go to state 38
    TYPE_FLOAT   shift, and go to state 39
    TYPE_STRING  shift, and go to state 40
    TYPE_NONE    shift, and go to state 41
    TYPE_TRUTH   shift, and go to state 42
    TYPE_LIST    shift, and go to state 43
    '='          shift, and go to state 44
    '('          shift, and go to state 45

    ','       reduce using rule 54 (input_list)
    ':'       reduce using rule 54 (input_list)
    '{'       reduce using rule 54 (input_list)
    $default  reduce using rule 30 (expression)

    type_statement  go to state 46
    input_list      go to state 47


State 18

   34 expression: '(' • expression ')'

    IF         shift, and go to state 29
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    TYPE_NONE  shift, and go to state 12
    TYPE       shift, and go to state 13
    INT        shift, and go to state 14
    FLOAT      shift, and go to state 15
    STRING     shift, and go to state 16
    VAR        shift, and go to state 30
    '('        shift, and go to state 18
    NOT        shift, and go to state 19
    '['        shift, and go to state 20

    $default  reduce using rule 23 (expression)

    TRUTH                go to state 22
    list_expression      go to state 23
    expression           go to state 48
    function_expression  go to state 26


State 19

   33 expression: NOT • expression

    IF         shift, and go to state 29
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    TYPE_NONE  shift, and go to state 12
    TYPE       shift, and go to state 13
    INT        shift, and go to state 14
    FLOAT      shift, and go to state 15
    STRING     shift, and go to state 16
    VAR        shift, and go to state 30
    '('        shift, and go to state 18
    NOT        shift, and go to state 19
    '['        shift, and go to state 20

    $default  reduce using rule 23 (expression)

    TRUTH                go to state 22
    list_expression      go to state 23
    expression           go to state 49
    function_expression  go to state 26


State 20

   21 list_expression: '[' • expression_list ']'
   22                | '[' • expression ']'

    IF         shift, and go to state 29
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    TYPE_NONE  shift, and go to state 12
    TYPE       shift, and go to state 13
    INT        shift, and go to state 14
    FLOAT      shift, and go to state 15
    STRING     shift, and go to state 16
    VAR        shift, and go to state 30
    '('        shift, and go to state 18
    NOT        shift, and go to state 19
    '['        shift, and go to state 20

    $default  reduce using rule 23 (expression)

    TRUTH                go to state 22
    expression_list      go to state 50
    list_expression      go to state 23
    expression           go to state 51
    function_expression  go to state 26


State 21

    3 block: block statement • ';'

    ';'  shift, and go to state 52


State 22

   25 expression: TRUTH •

    $default  reduce using rule 25 (expression)


State 23

   31 expression: list_expression •

    $default  reduce using rule 31 (expression)


State 24

   13 statement: expression •
   35 expression: expression • '+' expression
   36           | expression • '-' expression
   37           | expression • '*' expression
   38           | expression • '/' expression
   39           | expression • '%' expression
   40           | expression • POW expression
   41           | expression • '&' expression
   42           | expression • '|' expression
   43           | expression • '^' expression
   44           | expression • LEQ expression
   45           | expression • LNEQ expression
   46           | expression • LAND expression
   47           | expression • LOR expression
   48           | expression • '<' expression
   49           | expression • '>' expression
   50           | expression • LTEQ expression
   51           | expression • GTEQ expression

    LAND  shift, and go to state 53
    LOR   shift, and go to state 54
    LEQ   shift, and go to state 55
    LNEQ  shift, and go to state 56
    LTEQ  shift, and go to state 57
    GTEQ  shift, and go to state 58
    POW   shift, and go to state 59
    '<'   shift, and go to state 60
    '>'   shift, and go to state 61
    '&'   shift, and go to state 62
    '|'   shift, and go to state 63
    '^'   shift, and go to state 64
    '+'   shift, and go to state 65
    '-'   shift, and go to state 66
    '*'   shift, and go to state 67
    '/'   shift, and go to state 68
    '%'   shift, and go to state 69

    $default  reduce using rule 13 (statement)


State 25

    6 block: block function_statement •

    $default  reduce using rule 6 (block)


State 26

   52 expression: function_expression •

    $default  reduce using rule 52 (expression)


State 27

    4 block: block if_statement •

    $default  reduce using rule 4 (block)


State 28

    5 block: block loop_statement •

    $default  reduce using rule 5 (block)


State 29

   53 expression: IF • expression ':' expression ':' expression

    IF         shift, and go to state 29
    TRUE       shift, and go to state 10
    FALSE      shift, and go to state 11
    TYPE_NONE  shift, and go to state 12
    TYPE       shift, and go to state 13
    INT        shift, and go to state 14
    FLOAT      shift, and go to state 15
    STRING     shift, and go to state 16
    VAR        shift, and go to state 30
    '('        shift, and go to state 18
    NOT        shift, and go to state 19
    '['        shift, and go to state 20

    $default  reduce using rule 23 (expression)

    TRUTH                go to state 22
    list_expression      go to state 23
    expression           go to state 70
    function_expression  go to state 26


State 30

   29 expression: VAR • '=' expression
   30           | VAR •
   62 function_expression: VAR • '(' expression_list ')'
   63                    | VAR • '(' expression ')'

    '='  shift, and go to state 44
    '('  shift, and go to state 45

    $default  reduce using rule 30 (expression)


State 31

   16 statement: RETURNS expression •
   35 expression: expression • '+' expression
   36           | expression • '-' expression
   37           | expression • '*' expression
   38           | expression • '/' expression
   39           | expression • '%' expression
   40           | expression • POW expression
   41           | expression • '&' expression
   42           | expression • '|' expression
   43           | expression • '^' expression
   44           | expression • LEQ expression
   45           | expression • LNEQ expression
   46           | expression • LAND expression
   47           | expression • LOR expression
   48           | expression • '<' expression
   49           | expression • '>' expression
   50           | expression • LTEQ expression
   51           | expression • GTEQ expression

    LAND  shift, and go to state 53
    LOR   shift, and go to state 54
    LEQ   shift, and go to state 55
    LNEQ  shift, and go to state 56
    LTEQ  shift, and go to state 57
    GTEQ  shift, and go to state 58
    POW   shift, and go to state 59
    '<'   shift, and go to state 60
    '>'   shift, and go to state 61
    '&'   shift, and go to state 62
    '|'   shift, and go to state 63
    '^'   shift, and go to state 64
    '+'   shift, and go to state 65
    '-'   shift, and go to state 66
    '*'   shift, and go to state 67
    '/'   shift, and go to state 68
    '%'   shift, and go to state 69

    $default  reduce using rule 16 (statement)


State 32

   15 statement: EXIT expression •
   35 expression: expression • '+' expression
   36           | expression • '-' expression
   37           | expression • '*' expression
   38           | expression • '/' expression
   39           | expression • '%' expression
   40           | expression • POW expression
   41           | expression • '&' expression
   42           | expression • '|' expression
   43           | expression • '^' expression
   44           | expression • LEQ expression
   45           | expression • LNEQ expression
   46           | expression • LAND expression
   47           | expression • LOR expression
   48           | expression • '<' expression
   49           | expression • '>' expression
   50           | expression • LTEQ expression
   51           | expression • GTEQ expression

    LAND  shift, and go to state 53
    LOR   shift, and go to state 54
    LEQ   shift, and go to state 55
    LNEQ  shift, and go to state 56
    LTEQ  shift, and go to state 57
    GTEQ  shift, and go to state 58
    POW   shift, and go to state 59
    '<'   shift, and go to state 60
    '>'   shift, and go to state 61
    '&'   shift, and go to state 62
    '|'   shift, and go to state 63
    '^'   shift, and go to state 64
    '+'   shift, and go to state 65
    '-'   shift, and go to state 66
    '*'   shift, and go to state 67
    '/'   shift, and go to state 68
    '%'   shift, and go to state 69

    $default  reduce using rule 15 (statement)


State 33

   14 statement: PRINT expression •
   35 expression: expression • '+' expression
   36           | expression • '-' expression
   37           | expression • '*' expression
   38           | expression • '/' expression
   39           | expression • '%' expression
   40           | expression • POW expression
   41           | expression • '&' expression
   42           | expression • '|' expression
   43           | expression • '^' expression
   44           | expression • LEQ expression
   45           | expression • LNEQ expression
   46           | expression • LAND expression
   47           | expression • LOR expression
   48           | expression • '<' expression
   49           | expression • '>' expression
   50           | expression • LTEQ expression
   51           | expression • GTEQ expression

    LAND  shift, and go to state 53
    LOR   shift, and go to state 54
    LEQ   shift, and go to state 55
    LNEQ  shift, and go to state 56
    LTEQ  shift, and go to state 57
    GTEQ  shift, and go to state 58
    POW   shift, and go to state 59
    '<'   shift, and go to state 60
    '>'   shift, and go to state 61
    '&'   shift, and go to state 62
    '|'   shift, and go to state 63
    '^'   shift, and go to state 64
    '+'   shift, and go to state 65
    '-'   shift, and go to state 66
    '*'   shift, and go to state 67
    '/'   shift, and go to state 68
    '%'   shift, and go to state 69

    $default  reduce using rule 14 (statement)


State 34

   35 expression: expression • '+' expression
   36           | expression • '-' expression
   37           | expression • '*' expression
   38           | expression • '/' expression
   39           | expression • '%' expression
   40           | expression • POW expression
   41           | expression • '&' expression
   42           | expression • '|' expression
   43           | expression • '^' expression
   44           | expression • LEQ expression
   45           | expression • LNEQ expression
   46           | expression • LAND expression
   47           | expression • LOR expression
   48           | expression • '<' expression
   49           | expression • '>' expression
   50           | expression • LTEQ expression
   51           | expression • GTEQ expression
   53           | IF expression • ':' expression ':' expression
   64 if_statement: IF expression • '{' block '}'
   65             | IF expression • ':' statement ';'
   66             | IF expression • ':' statement ';' ELSE ':' statement ';'
   67             | IF expression • '{' block '}' ELSE '{' block '}'
   68             | IF expression • '{' block '}' ELSE ':' statement ';'
   69             | IF expression • ':' statement ';' ELSE '{' block '}'

    LAND  shift, and go to state 53
    LOR   shift, and go to state 54
    LEQ   shift, and go to state 55
    LNEQ  shift, and go to state 56
    LTEQ  shift, and go to state 57
    GTEQ  shift, and go to state 58
    POW   shift, and go to state 59
    '<'   shift, and go to state 60
    '>'   shift, and go to state 61
    '&'   shift, and go to state 62
    '|'   shift, and go to state 63
    '^'   shift, and go to state 64
    '+'   shift, and go to state 65
    '-'   shift, and go to state 66
    '*'   shift, and go to state 67
    '/'   shift, and go to state 68
    '%'   shift, and go to state 69
    ':'   shift, and go to state 71
    '{'   shift, and go to state 72


State 35
